fixed alignment for rhs nd footer colour

--- a/assets/style2.css
+++ b/assets/style2.css
@@ -155,7 +155,9 @@ a:link {
 /*Issues with virtical align. due to not working, i have removed it. */
 .column2 img{
     width:100px;
-
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     
 }
 .column2 {
@@ -164,12 +166,16 @@ a:link {
     background-color: #3E89BD;
     display: flex;
     flex-direction: column;
-    text-align: center;
-    
+    align-items: center;
     margin-top: 10px;
     margin-right: 5px;
 
 }
+
+h3{
+text-align: center;
+}
+
 
 .lead{
     padding: 20px;
@@ -187,7 +193,7 @@ a:link {
 }
 
 
-footer{
+.footer{
     color: black;
     display:block
 
